# ezflash-air-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml
include/: ez_cart.h
scenarios/: boot_fw.txt  boot_to_menu.txt  help_fixed.txt  language_persistence.txt  sd_browse.txt
src/: ez_cart.c  ez_mgba_adapter.c  ezair_device.c  ezair_device.h  ezair_runner.c
tests/: ez_cart_test.c
tests/regression/: game_boot.txt  help_freeze_buggy.txt
tests/romsrc/: testrom.c  testrom.gba
tools/: make_game_sd.sh  make_sd_image.sh  run_regression.sh  run_tests.sh
